--- a/src/BE/EMS.Domain/EMS.Domain.csproj
+++ b/src/BE/EMS.Domain/EMS.Domain.csproj
@@ -16,8 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Filters\" />
-    <Folder Include="Repositories\" />
+    <ProjectReference Include="..\Common\Common.csproj" />
   </ItemGroup>
 
 </Project>
