--- a/src/BE/EMS.PostgresMigrations/EMS.PostgresMigrations.csproj
+++ b/src/BE/EMS.PostgresMigrations/EMS.PostgresMigrations.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EMS.Infrastructure\EMS.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
