Application Account Services Enum Types

--- a/src/BE/EMS.Application/EMS.Application.csproj
+++ b/src/BE/EMS.Application/EMS.Application.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\EMS.Infrastructure\EMS.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\EM\" />
+  </ItemGroup>
+
 </Project>
