Account Services, IdentityEndpoints, UserEndpoints

--- a/src/BE/EMS.API/appsettings.json
+++ b/src/BE/EMS.API/appsettings.json
@@ -1,9 +1,27 @@
 {
+  "ConnectionStrings": {
+    "Account": ""
+  },
+  "EmailSettings": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SmtpUser": "buihoanghieu21122003@gmail.com",
+    "SmtpPassword": "rmqv ndjn tabv ijof"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "Jwt": {
+    "Key": "Your-Secret-Key-That-Is-At-Least-32-Bytes-Long",
+    "Issuer": "your_issuer",
+    "Audience": "your_audience",
+    "ExpiryInMinutes": 60,
+    "ExpiryInDays": 7
+  },
+  "AllowedHosts": "*",
+  "AllowOrigins": "https://localhost:3000"
+
 }
