--- a/src/BE/EMS.PostgresMigrations/EMS.PostgresMigrations.csproj
+++ b/src/BE/EMS.PostgresMigrations/EMS.PostgresMigrations.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\EMS.Infrastructure\EMS.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
